--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ h2 {
 .portfolio img {
   padding: 10px;
   margin-bottom: .5em;
+/*  width: 350px;*/
 }
 .portfolio img:hover {
   box-shadow: 0 0 20px #333;
