--- a/css/styles.css
+++ b/css/styles.css
@@ -146,13 +146,14 @@ h2 {
 .welcome-page {
   padding-top: 200px;
   padding-bottom: 200px;
-  
+  background: #d35400;
+    /*
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 30% 25%;
   background-image: url("https://docs.google.com/uc?export=download&id=0B3_V506_wrD8SmdtMVRkdVJBdlU");
-  /* use without jumbotron
-  text-shadow: 0 0 15px #eee; */
+  /* use without jumbotron */
+  text-shadow: 0 0 15px #eee;
 }
 
 .welcome-page > .jumbotron {
@@ -212,6 +213,26 @@ h2 {
 }
 
 /* ------------------------------ *\
+\* --------- TRANSITION ---------- */
+
+.transition {
+    width: 100%;
+    height: 300px;
+    
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 30% 25%;
+}
+
+.transition-1 {
+    background-image: url("https://docs.google.com/uc?export=download&id=0B3_V506_wrD8SmdtMVRkdVJBdlU");
+}
+
+.transition-2 {
+    background-image: url("https://docs.google.com/uc?export=download&id=0B3_V506_wrD8a0toTTRyelRJbEU");
+}
+
+/* ------------------------------ *\
 \* --------- PORTFOLIO ---------- */
 
 .portfolio {
@@ -229,7 +250,7 @@ h2 {
 .portfolio img {
   padding: 10px;
   margin-bottom: .5em;
-/*  width: 350px;*/
+  width: 350px;
 }
 .portfolio img:hover {
   box-shadow: 0 0 20px #333;
@@ -291,6 +312,12 @@ footer p {
   .biography__text--body {
     font-size: 1.25em;
   }
+    
+    .transition {
+    background-attachment: fixed;
+    background-position: center;
+  }
+    }
   
   .portfolio .row {
     margin-bottom: 1em;
